--- a/src/index.html
+++ b/src/index.html
@@ -16,30 +16,38 @@
   <script src="js/jquery/toggleDisabled.jquery.js"></script>
   <script src="js/handlebars-v1.3.0.js"></script>
   <script src="bootstrap-3.2.0/dist/js/bootstrap.js"></script>
+  <script src="bootstrap-3.2.0/js/tab.js"></script>
   <script src="js/generator.js"></script>
 
 </head>
 <body>
   <h1>Apache Config Generator</h1>
-    <div class="container">
+    <div class="container" style="width:94%;">
       <div class="row">
-        <div class="apache-config span10 col-md-7">
-          <pre class="pre-scrollable"></pre>
+
+        <div id="form-tabs" class="col-md-1" style="float:right;">
+          <ul class="nav nav-pills nav-stacked" role="tablist">
+            <li class="active"><a href="#home" role="tab" data-toggle="pill">Home</a></li>
+            <li><a href="#mod-ssl" role="tab" data-toggle="pill">SSL</a></li>
+            <li><a href="#mod-rewrite" role="tab" data-toggle="pill">ReWrite</a></li>
+          </ul>
         </div>
-        <div class="span2 col-md-5">
-          <form class="apache-config" role="form">
 
+        <div class="col-md-5" style="float:right;">
+          <form class="apache-config" role="form"></form>
+        </div>
 
-          </form>
+        <div class="apache-config col-md-6">
+          <pre class="pre-scrollable"></pre>
         </div>
 
       </div>
     </div>
-
-</body>
-<footer class="centered">
+<footer>
   <p>
-    Apache Config Generator &copy; 2014 <a href="http://www.binaryalchemist.org">Binary Alchemist</a>
+    Apache Config Generator &copy; 2014 <a href="//www.binaryalchemist.org" target="_blank">Binary Alchemist</a>
   </p>
 </footer>
+</body>
+
 </html>
