--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,10 @@
       <div class="row">
 
         <div id="form-tabs" class="col-md-1" style="float:right;">
-          <ul class="nav nav-pills nav-stacked" role="tablist">
-            <li class="active"><a href="#home" role="tab" data-toggle="pill">Home</a></li>
-            <li><a href="#mod-ssl" role="tab" data-toggle="pill">SSL</a></li>
-            <li><a href="#mod-rewrite" role="tab" data-toggle="pill">ReWrite</a></li>
+          <ul id="myTab" class="nav nav-pills nav-stacked">
+            <li class="active"><a href="#home" data-toggle="pill">Home</a></li>
+            <li><a href="#mod-ssl" data-toggle="pill">SSL</a></li>
+            <li><a href="#mod-rewrite" data-toggle="pill">ReWrite</a></li>
           </ul>
         </div>
 
